--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background-image: url("/images/screenBackground.jpg");
+    background-image: url("./images/screenBackground.jpg");
     background-size: cover;
 }
 
